# imbricate

./: .gitignore  Cargo.toml  README.md  pyproject.toml
.github/workflows/: CI.yml
examples/: generate.py  generate_json.py  generate_to_parquet.py  read.py  read_batch_deserializer.py  read_native.py  read_pandas.py  to_parquet.py
python/imbricate/: __init__.py  __init__.pyi
src/: lib.rs  reader.rs  sample.rs  sample_serde.rs
