[build-system]
requires = ["maturin>=0.14,<0.15"]
build-backend = "maturin"

[project]
name = "imbricate"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

dependencies = [
    "pyarrow == 11.0.0",
    "faker == 17.6.0"
]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
